# cai

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
app/: CMakeLists.txt  main.cpp
compiler/: CMakeLists.txt
compiler/caic/: CMakeLists.txt
compiler/caic_parse/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in
docs/inter/: inter.md
include/ast/: ast.h  ast_visitor.h
include/driver/: cai_driver.h
include/inter/: ir_visitor.h
include/parse/: yy_driver.h
include/util/: cai_log.h  type.h
scripts/: build.sh  gen_parser.sh
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  ast.cpp
src/driver/: CMakeLists.txt  cai_driver.cpp
src/inter/: CMakeLists.txt  inter.cpp
src/parse/: CMakeLists.txt  lexer.ll  yy_driver.cpp
src/util/: CMakeLists.txt  cai_log.cpp
test/: CMakeLists.txt
test/arg/: CMakeLists.txt  parse_args_test.cpp
unittests/parse/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp
